k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-startkit-service
  namespace: default
  labels:
    app.kubernetes.io/name: laravel-startkit
    app.kubernetes.io/component: service
  annotations:
    app.kubernetes.io/name: laravel-startkit
    app.kubernetes.io/component: service
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
    - name: swoole
      port: 8000
      targetPort: 8000
  selector:
    app.kubernetes.io/name: laravel-startkit
    app.kubernetes.io/instance: laravel-startkit
